# Helix_Bifurcation_Types

./: .gitignore  README.md
DataProcessing/Joints/: c1_0.20681_c2_-0.48563.txt  c1_0.20895_c2_-0.16976.txt  c1_0.2095_c2_-0.32122.txt  c1_0.23796_c2_-0.11174.txt  c1_0.23946_c2_-0.42033.txt  c1_0.23972_c2_-0.26079.txt  c1_0.23_c2_0.txt  c1_0.267_c2_-0.05367.txt  c1_0.26945_c2_-0.52762.txt  c1_0.26948_c2_-0.20125.txt  c1_0.26_c2_0.txt  c1_0.2711_c2_-0.35705.txt  c1_0.29629_c2_0.00491.txt  c1_0.29904_c2_-0.14214.txt  c1_0.30301_c2_-0.4605.txt  c1_0.32606_c2_0.06447.txt  c1_0.32691_c2_0.21376.txt  c1_0.32862_c2_-0.08298.txt  c1_0.33248_c2_-0.23429.txt  c1_0.33532_c2_-0.57347.txt  c1_0.33553_c2_-0.39545.txt  c1_0.33_c2_0.txt  c1_0.35659_c2_0.12551.txt  c1_0.35846_c2_-0.0233.txt  c1_0.35932_c2_0.27859.txt  c1_0.35_c2_0.txt  c1_0.35_c2_0_without_sub.txt  c1_0.36272_c2_-0.17381.txt  c1_0.36732_c2_-0.33188.txt  c1_0.36998_c2_-0.50415.txt  c1_0.37_c2_0.txt  c1_0.38814_c2_0.18861.txt  c1_0.3888_c2_0.03737.txt  c1_0.39299_c2_-0.11327.txt  c1_0.39342_c2_0.34678.txt  c1_0.39862_c2_-0.26927.txt  c1_0.3_c2_0.txt  c1_0.40357_c2_-0.43696.txt  c1_0.40784_c2_0.51962.txt  c1_0.41989_c2_0.09957.txt  (+135 more)
DataProcessing/Observations/: test_c1_0.20681_c2_-0.48563.txt  test_c1_0.20895_c2_-0.16976.txt  test_c1_0.2095_c2_-0.32122.txt  test_c1_0.23796_c2_-0.11174.txt  test_c1_0.23946_c2_-0.42033.txt  test_c1_0.23972_c2_-0.26079.txt  test_c1_0.23_c2_0.txt  test_c1_0.267_c2_-0.05367.txt  test_c1_0.26945_c2_-0.52762.txt  test_c1_0.26948_c2_-0.20125.txt  test_c1_0.2711_c2_-0.35705.txt  test_c1_0.29629_c2_0.00491.txt  test_c1_0.29904_c2_-0.14214.txt  test_c1_0.30301_c2_-0.4605.txt  test_c1_0.32606_c2_0.06447.txt  test_c1_0.32691_c2_0.21376.txt  test_c1_0.32862_c2_-0.08298.txt  test_c1_0.33248_c2_-0.23429.txt  test_c1_0.33532_c2_-0.57347.txt  test_c1_0.33553_c2_-0.39545.txt  test_c1_0.33_c2_0.txt  test_c1_0.35659_c2_0.12551.txt  test_c1_0.35846_c2_-0.0233.txt  test_c1_0.35932_c2_0.27859.txt  test_c1_0.35_c2_0.txt  test_c1_0.36272_c2_-0.17381.txt  test_c1_0.36732_c2_-0.33188.txt  test_c1_0.36998_c2_-0.50415.txt  test_c1_0.37_c2_0.txt  test_c1_0.38814_c2_0.18861.txt  test_c1_0.3888_c2_0.03737.txt  test_c1_0.39299_c2_-0.11327.txt  test_c1_0.39342_c2_0.34678.txt  test_c1_0.39862_c2_-0.26927.txt  test_c1_0.3_c2_0.txt  test_c1_0.40357_c2_-0.43696.txt  test_c1_0.40784_c2_0.51962.txt  test_c1_0.41989_c2_0.09957.txt  test_c1_0.42102_c2_0.25438.txt  test_c1_0.42352_c2_-0.05221.txt  (+133 more)
DataProcessing/PlotFunc/: ExpDataSub.mat  ExpDataSuper.mat  alignData.m  findReversePoint.m  (+7 more)
motionPlanning/: Dockerfile  ros_entrypoint.sh
motionPlanning/src/helix_test/: CMakeLists.txt  package.xml
motionPlanning/src/helix_test/Data/: c1_0.35_c2_0.txt  c1_1_c2_0.txt  testdata.txt
motionPlanning/src/helix_test/config/: demo_config.rviz
motionPlanning/src/helix_test/include/helix_test/: demo_application.h
motionPlanning/src/helix_test/launch/: helix_run.launch  helix_setup.launch
motionPlanning/src/helix_test/saveData/: c1_1_c2_0.txt
motionPlanning/src/helix_test/src/: computePath.cpp  demo_application.cpp  helix_test_node.cpp
motionPlanning/src/helix_test/src/tasks/: Pose_10_1.txt  generate_trajectory.cpp  init_descartes.cpp  init_ros.cpp  load_parameters.cpp  move_home.cpp  plan_path.cpp  run_path.cpp
motionPlanning/src/helix_test/state_recognition/: blue_marker_detector.py  postprocess_savedFile.py
motionPlanning/src/helix_test/state_recognition/utils/: centroid_tracker_cap.py
simCodes/: CMakeLists.txt  Helix_Configuration.m  option.txt  runSim.m
(+229 files in other folders)
